--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Sawadikap</string>
-    <string name="home">Home</string>
-    <string name="wardrobe">Wardrobe</string>
-    <string name="history">History</string>
+    <string name="home">Beranda</string>
+    <string name="wardrobe">Lemari</string>
+    <string name="history">Riwayat</string>
     <string name="intro_title_1">Siapa Sawadikap?</string>
     <string name="intro_desc_1">Sawadikap adalah platform sedekah pakaian pertama di Indonesia yang dapat memudahkan pengguna untuk berbagi dengan siapapun, dimanapun, dan kapanpun</string>
     <string name="intro_title_2">Mengapa Sawadikap?</string>
@@ -12,4 +12,5 @@
     <string name="intro_desc_3">Jadi bagian dari kami, unggah pakaianmu, pilih berbagi kemudian tunggu kurir menjemput pakaianmu dan sedekahmu selesai</string>
     <string name="intro_title_4">Mulailah berbagi</string>
     <string name="intro_desc_4">Tunggu apalagi, ayo mulai berbagi</string>
+
 </resources>
